--- a/scavenger/client/templates/answerPage.html
+++ b/scavenger/client/templates/answerPage.html
@@ -33,9 +33,9 @@
 
     {{#if theQuestion.isItem}}
       <form class="itemCheckFrm">Do you have the item refered to in this question?<br>
-        Yeah, we got it!<input class="radioBtn" type="radio" name="gotItem" value="false"><br>
+        Yeah, we got it!<input class="radioBtn" type="radio" name="gotItem" value="true"><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Nope.<input class="radioBtn" type="radio" name="gotItem" value="true">
+        Nope.<input class="radioBtn" type="radio" name="gotItem" value="false">
       </form>
     {{/if}}
 
