--- a/scavenger/client/templates/teamListContainer.html
+++ b/scavenger/client/templates/teamListContainer.html
@@ -4,17 +4,18 @@
     <div class="teamList1">
       <div class="listTitle">Corporate Teams</div>
       <ul>
-        {{#each teams corporate}}
-          <li class="teamLink">{{this}}</li>
+        {{#each teams "corporate"}}
+          <li class="teamLink" id="{{this.teamName}}">{{this.teamName}}</li>
         {{/each}}
       </ul>
     </div>
 
     <div class="teamList2">
       <div class="listTitle">Family Teams</div>
+      <span class="dumb"></span>
       <ul>
-        {{#each teams adult}}
-          <li class="teamLink">{{this}}</li>
+        {{#each teams "family"}}
+          <li class="teamLink" id="{{this.teamName}}">{{this.teamName}}</li>
         {{/each}}
       </ul>
     </div>
@@ -22,8 +23,8 @@
     <div class="teamList3">
       <div class="listTitle">Adult Teams</div>
       <ul>
-        {{#each teams family}}
-          <li class="teamLink">{{this}}</li>
+        {{#each teams "adult"}}
+          <li class="teamLink" id="{{this.teamName}}">{{this.teamName}}</li>
         {{/each}}
       </ul>
     </div>
