--- a/scavenger/client/templates/verifyPg.html
+++ b/scavenger/client/templates/verifyPg.html
@@ -1,4 +1,16 @@
 <template name="verifyPg">
+
+  <div class="modalGray off">
+    <div class="variablePtsModal off">
+      <br>
+      This question requires a variable amount of points.<br>
+      please enter the total amount of points earned by this team, for this quesiton in the box below and click accept:<br>
+      <input id="variablePtsinput">
+
+      <div class="button" id="variableBtn">Accept</div>
+    </div>
+  </div>
+
 {{> dash}}
 <div class="backToTeams">Back to teams</div>
 <br><br>
