--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -93,13 +93,13 @@ body {
   height: 60px; }
 
 .modalGrey {
-  background: rgba(115, 148, 141, 0.5);
+  background: #73948d;
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 155000; }
+  z-index: 15; }
 
 .modalBox {
   background: #A1D7D9;
@@ -603,5 +603,14 @@ body {
 
 .rejected {
   background: #DB432B; }
+
+.variablePtsModal {
+  position: fixed;
+  z-index: 17;
+  top: 200px;
+  left: 300px;
+  width: 500px;
+  height: 300px;
+  background: yellow; }
 
 /*# sourceMappingURL=main.css.map */
