--- a/scavenger/client/templates/teamsPg.html
+++ b/scavenger/client/templates/teamsPg.html
@@ -1,5 +1,6 @@
 <template name="teamsPg">
   {{> dash}}
   <div class="backToLogin">Logout</div>
+  <div class="toLeader">To Leader<br>boards</div>
   {{> teamListContainer}}
 </template>
