--- a/scavenger/client/templates/verifyPg.html
+++ b/scavenger/client/templates/verifyPg.html
@@ -1,16 +1,5 @@
 <template name="verifyPg">
 
-  <div class="modalGray off">
-    <div class="variablePtsModal off">
-      <br>
-      This question requires a variable amount of points.<br>
-      please enter the total amount of points earned by this team, for this quesiton in the box below and click accept:<br>
-      <input id="variablePtsinput">
-
-      <div class="button" id="variableBtn">Accept</div>
-    </div>
-  </div>
-
 {{> dash}}
 <div class="backToTeams">Back to teams</div>
 <br><br>
@@ -18,6 +7,18 @@
 <div class="AnswerArea">
 
   <div class="answeredQuestionsList">
+
+    <div class="off modalGrey"></div><!--end modalGray-->
+      <div class="variablePtsModal animated slideInUp off">
+        <br><br>
+        This question requires a variable amount of points.<br>
+        please enter the total amount of points earned by this team, for this quesiton in the box below and click accept:<br><br>
+        <input id="variablePtsinput"><br><br>
+        <div class="button" id="variableBtn">Accept</div><br><br>
+        <div class="button" id="variableCancelBtn">Cancel</div>
+      </div>
+
+
     <div class="teamInfo">
       <span class="teamInfoEmphasis">{{selectedTeam.[0].teamName}}'s</span> total points: <span class="pts">{{selectedTeam.[0].overallPoints}}</span><br>
       All of <span class="teamInfoEmphasis">{{selectedTeam.[0].teamName}}'s</span> answered quesitons:
