--- a/scavenger/client/templates/leaderPg.html
+++ b/scavenger/client/templates/leaderPg.html
@@ -1,8 +1,8 @@
 <template name="leaderPg">
-  {{> dash}}
+  {{> leaderDash}}
   <div class="backToTeams">Back to teams</div>
 
-  {{> teamListContainer}}
+  {{> leaderContainer}}
 THIS IS THE LEADER PAGE
 
 </template>
