--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -753,3 +753,12 @@ $cshGreen: #90A039;
   height: 300px;
   background: rgb(236, 247, 142);
 }
+.leadTeamLink{
+  margin:5px;
+  text-decoration: underline;
+}
+.leadTeamLink:hover{
+  background: white;
+  color: black;
+  cursor:pointer;
+}
