--- a/scavenger/client/templates/AboutPg.html
+++ b/scavenger/client/templates/AboutPg.html
@@ -7,7 +7,42 @@
     <div class="dashLogin">About the Hunt</div>
   </div>
   <br><br>  <br><br><br>
-  The Cary Citizen has been running the Cary Scavenger hunt for the last 4 years and every year it continues to grow and be even more awesome than the last year. This year there are over 70 teams competeing to find the answers to 70 questions!
+<div class="aboutHunt">
+Cary's biggest adventure takes place Saturday, September 17, 2016 when
+
+CaryCitizen creates the 7 th annual Cary Scavenger Hunt!
+
+One part Amazing Race, one part Treasure Hunt, this adventure takes registered
+
+teams on a quest all around Cary to find the answers to the most clues during a
+
+limited amount of time, between 9:30am and 1:30pm.
+
+Teams will be searching for Cary's Historical Markers, Public Art, Parks &amp;
+
+Greenways, Schools, Local Businesses and more as the answers to our riddle-
+
+filled clue book.
+
+Teamwork is key and there is strategy involved. Teams will work to decipher as
+
+many clues as possible before setting out to make the best use of their allotted
+
+time. But no one team will answer all of the 70 questions- they must prioritize!
+
+While questions are in the paper cluebook all answers must be logged in using
+
+the Cary Scavenger Hunt phone app. Judges at the finish will work with team
+
+captains to verify if answers are correct and create the final scores.
+
+Top 3 tams in each of 3 team categories take home cash and trophies. Final
+
+scores and team standings will be displayed online at:<br><br><br>
+
+<span style="text-align: center">www.caryscavengerhunt.com</span>
+
+</div>
   <br><br><br>
     <a href="https://www.iubenda.com/privacy-policy/7896919" target="_blank" class="iubenda-white no-brand iub-body-embed iubenda-embed" title="Privacy Policy">Privacy Policy</a>
     <script type="text/javascript">
