--- a/scavenger/client/templates/leaderDash.html
+++ b/scavenger/client/templates/leaderDash.html
@@ -1,7 +1,8 @@
 <template name="leaderDash">
   <div class="topDash">
 
-    <span class="white">2016 Cary Citizen</span> <span class="blue">Scavenger Hunt</span><span class="red"> LEADERBOARD</span>
+    <span class="white">2016 Cary Citizen</span> <span class="blue">Scavenger Hunt</span>
+    <br><span class="red">LEADERBOARD</span>
     <br>
   </div>
 </template>
