--- a/scavenger/client/templates/sponsorsPg.html
+++ b/scavenger/client/templates/sponsorsPg.html
@@ -16,88 +16,80 @@
   The Town of Cary
   <br><br><br>
   <div class="sponsorLine">
-    <span class="sponsorTitle">Presenting</span>
+    <span class="sponsorTitle">Presenting Sponsor</span>
   </div>
   <br><br>
   Cary Citizen
-  <br><br>
-  Doctor's Express
   <br><br><br>
   <div class="sponsorLine">
-    <span class="sponsorTitle">Technology</span>
+    <span class="sponsorTitle">Technology Sponsors</span>
   </div>
-    <br><br>
-    Kramden Institute
-    <br><br>
-    The Forge Initiative (formerly Wake Robotics)
     <br><br>
     Triangle Family Dentistry
     <br><br>
     Carolina Orthodontics & Children's Dentistry
     <br><br><br>
   <div class="sponsorLine">
-    <span class="sponsorTitle">Platinum</span>
+    <span class="sponsorTitle">Platinum Sponsors</span>
   </div>
     <br><br>
-    Great Harvest
+    Ashworth Drugs
     <br><br>
-    Ashworth Drug
+    Atlantic Tire & Service
     <br><br>
-    Chick Fil A
+    Chick Fil A of Waverly
     <br><br>
-    Cat Clinic
+    Great Harvest Bread
     <br><br>
-    NC Amtrack
+    Mr Roof- Raleigh
     <br><br>
-    Koka Fit Club
+    NC DOT Rail Division
     <br><br>
-    Paws In The City
-    <br><br><br>
-    <div class="sponsorLine">
-      <span class="sponsorTitle">Gold</span>
-    </div>
-    <br><br>
-    Cary Family Eye Care
-    <br><br>
-    Whole Foods
-    <br><br>
-    Cary YMCA
-    <br><br>
-    Hurricane Grill & Wings
-    <br><br>
-    Firewurst
-    <br><br>
-    The Country Connection Western Store
-    <br><br>
-    The Butcher's Market
-    <br><br>
-    Workout Anytime
-    <br><br>
-    The Mayton Inn
-    <br><br>
-    Kite Realty- Parkside Town Commons
-    <br><br>
-    Stonehaven Jewelry
+    OrangeTheory Fitness
     <br><br>
     Triangle Table Tennis
     <br><br><br>
     <div class="sponsorLine">
-      <span class="sponsorTitle">Silver</span>
+      <span class="sponsorTitle">Gold Sponsors</span>
     </div>
     <br><br>
-    Heart of Cary
+    Cary Family Eye Care
     <br><br>
-    Glenaire
+    Cary Family YMCA
     <br><br>
-    Dorcas
+    Dave and Busters
     <br><br>
-    School of Rock
+    Duck Donuts
+    <br><br>
+    The Egg & I
+    <br><br>
+    Jumpstreet
+    <br><br>
+    The Mayton Inn
+    <br><br>
+    Maximillian’s Grill & Wine Bar
+    <br><br>
+    Reply OB/GYN & Fertility
+    <br><br>
+    Shuckin’ Shack Oyster Bar
+    <br><br>
+    Waverly Place
+    <br><br><br>
+    <div class="sponsorLine">
+      <span class="sponsorTitle">Silver Sponsors</span>
+    </div>
     <br><br>
     Dogtopia
     <br><br>
-    Wake Academy
+    Dorcas Ministries
     <br><br>
-    Triangle Food Tour
+    Glenaire
+    <br><br>
+    Kramden Institute
+    <br><br>
+    School of Rock
+    <br><br>
+    Wake Academy
     <br><br><br>
 
 
