--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -658,14 +658,94 @@ body {
   height: 300px;
   background: #ecf78e; }
 
-.leadTeamLink {
-  margin: 5px;
-  width: 100%; }
+.leaderListTitle {
+  border-bottom: #233F51 1px solid;
+  text-align: center;
+  color: white; }
 
-.leadTeamLink:hover {
-  background: white;
-  color: black;
-  cursor: pointer; }
+.leadTeamLink3:nth-of-type(n) {
+  margin: 5px;
+  width: 100%;
+  background: #90A039;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #444; }
+
+.leadTeamLink3:nth-of-type(2n) {
+  margin: 5px;
+  width: 100%;
+  background: #568b4e;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #444; }
+
+.leadTeamLink2:nth-of-type(n) {
+  margin: 5px;
+  width: 100%;
+  background: #DB432B;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #444; }
+
+.leadTeamLink2:nth-of-type(2n) {
+  margin: 5px;
+  width: 100%;
+  background: #9c4848;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #444; }
+
+.leadTeamLink1:nth-of-type(n) {
+  margin: 5px;
+  width: 100%;
+  background: #94CED1;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #444; }
+
+.leadTeamLink1:nth-of-type(2n) {
+  margin: 5px;
+  width: 100%;
+  background: #2D7A7C;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #444; }
+
+.leadTeamLink1:nth-of-type(1) {
+  font-size: 30px;
+  color: white; }
+
+.leadTeamLink1:nth-of-type(2) {
+  font-size: 24px;
+  color: #ccc; }
+
+.leadTeamLink1:nth-of-type(3) {
+  font-size: 18px;
+  color: #aaa; }
+
+.leadTeamLink2:nth-of-type(1) {
+  font-size: 30px;
+  color: white; }
+
+.leadTeamLink2:nth-of-type(2) {
+  font-size: 24px;
+  color: #ccc; }
+
+.leadTeamLink2:nth-of-type(3) {
+  font-size: 18px;
+  color: #aaa; }
+
+.leadTeamLink3:nth-of-type(1) {
+  font-size: 30px;
+  color: white; }
+
+.leadTeamLink3:nth-of-type(2) {
+  font-size: 24px;
+  color: #ccc; }
+
+.leadTeamLink3:nth-of-type(3) {
+  font-size: 18px;
+  color: #aaa; }
 
 .teamScore {
   margin: 5px; }
