--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -71,7 +71,7 @@ body{
 }
 .needRegBtn{
   display: inline-block;
-  background: rgb(115, 148, 141);
+  background: #c84035;
   width: 100%;
   padding:15px;
   text-align: center;
