--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -62,7 +62,7 @@ body {
 
 .needRegBtn {
   display: inline-block;
-  background: #73948d;
+  background: #c84035;
   width: 100%;
   padding: 15px;
   text-align: center;
