--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -748,6 +748,7 @@ body {
   color: #aaa; }
 
 .teamScore {
-  margin: 5px; }
+  margin: 5px;
+  color: #edfe38; }
 
 /*# sourceMappingURL=main.css.map */
