--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -560,7 +560,7 @@ body {
   width: 38.4%;
   position: fixed;
   left: 51.5%;
-  height: 650px;
+  height: 725px;
   margin-right: 10%;
   float: right; }
 
@@ -609,7 +609,8 @@ body {
   border: 1px #90A039 solid;
   display: inline-block;
   width: 100px;
-  font-family: sans-serif; }
+  font-family: sans-serif;
+  font-size: 12px; }
 
 .yep:hover {
   background: #90A039;
@@ -619,7 +620,8 @@ body {
   border: 1px #DB432B solid;
   display: inline-block;
   width: 100px;
-  font-family: sans-serif; }
+  font-family: sans-serif;
+  font-size: 12px; }
 
 .nope:hover {
   background: #7d2929;
