fix multiple clicks on point entry modal

--- a/scavenger/client/templates/verifyPg.html
+++ b/scavenger/client/templates/verifyPg.html
@@ -9,12 +9,12 @@
   <div class="answeredQuestionsList">
 
     <div class="off modalGrey"></div><!--end modalGray-->
-      <div class="variablePtsModal animated slideInUp off">
+      <div class="variablePtsModal off">
         <br><br>
         This question requires a variable amount of points.<br>
         please enter the total amount of points earned by this team, for this question in the box below and click accept:<br><br>
         <input id="variablePtsinput"><br><br>
-        <div class="button" id="variableBtn">Accept</div><br><br>
+        <div  class="variableBtn">Accept</div><br><br>
         <div class="button" id="variableCancelBtn">Cancel</div>
       </div>
 
